Added jvm flags for sansa to the docker,rpm,deb packages